Closed Bug 1199107 Opened 9 years ago Closed 9 years ago

Access PBAP vCard input stream directly instead of passing it as input parameter

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(feature-b2g:2.2r+, b2g-v2.2r fixed, b2g-master fixed)

RESOLVED FIXED
feature-b2g 2.2r+
Tracking Status
b2g-v2.2r --- fixed
b2g-master --- fixed

People

(Reporter: ben.tian, Assigned: ben.tian)

References

Details

Attachments

(4 files, 4 obsolete files)

Access member variable of vCard input stream directly instead of passing it as input parameter.
Attachment #8653313 - Attachment description: Patch 1 (v1): Access PBAP vCard input stream directly instead of passing it as input parameter → [2.2r] Patch 1 (v1): Access PBAP vCard input stream directly instead of passing it as input parameter
Depends on: 1180556
change:
- rename |mRequirePhonebookSize| to |mPhonebookSizeRequired|
Attachment #8653314 - Attachment is obsolete: true
Attachment #8653314 - Flags: review?(shuang)
Attachment #8653323 - Flags: review?(shuang)
changes:
- remove __FUNCTION__ from log since BT_LOGR already includes it
- revise |Disconnect| with guardian clause
Attachment #8653323 - Attachment is obsolete: true
Attachment #8653323 - Flags: review?(shuang)
Attachment #8653325 - Flags: review?(shuang)
Mark as feature-b2g:2.2r+ since this bug relates to 2.2r required feature PBAP.

Also set checkin-needed to land the 2 patches into 2.2r branch.
feature-b2g: --- → 2.2r+
Keywords: checkin-needed
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #6)
> https://hg.mozilla.org/releases/mozilla-b2g37_v2_2r/rev/217e2a1460a1
> https://hg.mozilla.org/releases/mozilla-b2g37_v2_2r/rev/03dd969850a0
> 
> Is master unaffected/wontfix?

M-c patch requires to rebase due to huge difference between m-c and 2.2r. I'm focusing on 2.2r first and will land the fix to m-c later. Please leave this bug open to track m-c fix.
Flags: needinfo?(btian)
Target Milestone: FxOS-S6 (04Sep) → ---
Blocks: 1199528
Blocks: 1199548
Add missing log revision.
Attachment #8654708 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: