Bug 1199107 - Access PBAP vCard input stream directly instead of passing it as input parameter. r=shuang, a=2.2r+